css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,500&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

/* Small devices (Mobile, 600px and down) */

.header {
    background-color: #cfe6cf;
    height: 150px;
    background: url('/images/banner-2.jpg') no-repeat;
    background-position: center;
    background-size: cover;
    display: flex;
    align-items: center;

}

.profile-picture {
    position: relative;
    top: -46px;
    left: 20px;
}

#image {
    border: 3px solid #CA6D18;
    border-radius: 50%;
    position: absolute;

}

.container {
    position: relative;
    left: 130px;
}

h1 {
    font-size: 20px;
    color: #797979;
}

h2 {
    font-size: 16px;
    color: #CA6D18;
}

.position {
    font-size: 11px;
}

.container p {
    font-size: 11px;
    color: #797979;
}

.navbar {
    position: sticky;
    top: 0px;
    background-color: #e4f6fbaa;
    width: 100%;
    height: 60px;
}

.menu h2 {
    padding: 5px 0 0 0;
    text-align: center;
}

.internal-links ul {
    display: flex;
    justify-content: center;
    list-style-type: none;
}

li {
    padding-right: 5px;
}

a {
    font-size: 12px;
}

a:link {
    text-decoration: none;
    color: black;
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: black;
}

a.company:link,
a.company:visited {
    color: #797979;
}

h3 {
    margin-top: 8px;
    font-size: 12px;
}

p {
    font-size: 11px;
}

.education {
    padding: 10px 10px 0;
}

.workExperience-skillsTools {
    margin-bottom: 20px;
    padding: 10px 10px 0;
    display: flex;
}

.experience {
    flex: 2;
}

.skills {
    margin-left: 18px;
    flex: 1;
}

.experience ul,
.skills ul {
    padding-left: 18px;
    font-size: 11px;
}

.footer {
    background-color: #cfe6cf;
    text-align: center;
    display: flex;
    flex-direction: column;
}

.form-box {
    margin: 20px 40px 20px 40px;
    z-index: 1;
    position: relative;
    width: 182px;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 5px solid #CA6D18;
    border-radius: 20px;
}

.form-box h3 {
    margin: 7px 0 20px 0;
    text-align: center;
}

span {
    color: #CA6D18;
}

.inputbox {
    position: relative;
    margin: 30px 2px 10px 0;
}

.inputbox label {
    position: absolute;
    top: -50%;
    font-size: 0.6em;
}

.inputbox input,
#subject,
textarea {
    font-size: 0.6em;
    border: 1px solid rgba(0, 0, 0, 0.2);
}

textarea {
    width: 80%;
    height: auto;
}

#submitBtn {
    margin: 10px 0 17px 0;
    width: 50%;
    height: 35px;
    border-radius: 40px;
    background: #fff;
    border: none;
    cursor: pointer;
    font-size: 1em;
    font-weight: 600;
}

.footer-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.placeholder {
    background-color: hsla(0, 0%, 100%, 0.3);
    border: 2px dashed black;
    border-radius: 10%;
    height: 328px;
    width: 182px;
    margin-right: 30px;
}

.contactDetails {
    margin-bottom: 10px;
}

/* Medium devices (Tablet portrait mode, 600px and up) */
@media only screen and (min-width: 600px) {
    .header {
        background-color: #cfe6cf;
        height: 200px;
    }

    .profile-picture {
        top: -82px;
    }

    #image {
        border: 4px solid #CA6D18;
    }

    .container {
        left: 200px;
    }

    h1 {
        font-size: 30px;
        color: #797979;
    }

    h2 {
        font-size: 20px;
        color: #CA6D18;
    }

    .position {
        font-size: 17px;
    }

    .container p {
        padding-top: 15px;
        font-size: 14px;
        color: #fff;
    }

    .navbar {
        height: 70px;
    }

    .menu h2 {
        padding: 10px 0 0 0;
    }

    li {
        padding-right: 10px;
    }

    a {
        font-size: 17px;
    }

    h3 {
        margin-top: 12px;
        font-size: 17px;
    }

    p {
        font-size: 15px;
    }

    .education {
        padding: 10px 20px 0 20px;
    }

    .workExperience-skillsTools {
        margin-bottom: 40px;
        padding: 10px 20px 0;
    }

    .skills {
        margin-left: 16px;
    }

    .experience ul,
    .skills ul {
        padding-left: 22px;
        font-size: 15px;
    }

    .form-box h3 {
        font-size: 20px;
    }

    .inputbox label {
        left: 20px;
        top: -70%;
        font-size: 0.9em;
    }

    .inputbox input,
    #subject,
    textarea {
        font-size: 0.7em;
        border: 1px solid rgba(0, 0, 0, 0.2);
    }

    textarea {
        width: 150px;
    }

    #submitBtn {
        font-size: 1.5em;
    }

    .placeholder {
        height: 351px;
        width: 282px;
    }

    .contactDetails {
        margin-bottom: 30px;
    }
}

/* Large devices (Laptops/Desktops, 1024px and up) */
@media only screen and (min-width: 1024px) {
    body {
        background-color: yellow;
    }
}

